--- a/public/cancel.html
+++ b/public/cancel.html
@@ -11,7 +11,7 @@
         <h1>Something Went Wrong!</h1>
         <p>An Error occoured while trying to process your payment.</p>
         <img src="img/cancel.png" alt="" />
-        <a href="http://localhost:3000" class="sc-btn">Back To Homepage</a>
+        <a href="https://northhigh-3d.onrender.com" class="sc-btn">Back To Homepage</a>
     </div>
 </body>
 </html>
