--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
                 <div class="total-title">Total</div>
                 <div class="total-price">$0</div>
             </div>
+            <p>Shipping is $4.50 Automatically</p>
             
             <h4 class="graytext2">Minimum of $0.50 order</h4> 
             <button type="button" class="btn-buy">Pay With Card</button>
@@ -78,9 +79,10 @@
             <div class="gap"></div>
             <div class="collapsible2">
                 <input type="checkbox" id="collapsible-head-3">
-            <label for="collapsible-head-3" class="product-title2">We <b>ONLY</b> accept North High Enrolled Students</label>
+            <label for="collapsible-head-3" class="product-title2">For <b>PAY IN PERSON</b> Click Here:</label>
             <div class="collapsible-text2">
             <p>
+                <b>We only accept these areas!</b>
                 <b>54703</b>
                 <div class="small-gap"></div>
                 <img src="img/zipcode.png" alt="">
