--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
                 <div class="total-title">Total</div>
                 <div class="total-price">$0</div>
             </div>
-            <p>Shipping is $4 per <b>different</b> item</p>
+            <p>Shipping is $4</p>
             
             <h4 class="graytext2">Minimum of $5.00 order</h4> 
             <button type="button" class="btn-buy">Pay With Card</button>
