--- a/public/success.html
+++ b/public/success.html
@@ -12,7 +12,7 @@
         <!--<p>Meet infront of the husky door in 3 days.</p> -->
         <h2 class="ps">if you need assistace, email me at: craftylandon@gmail.com</h2>
         <img src="img/success.png" alt="" />
-        <a href="3ddoge.tk" class="sc-btn">Back To Homepage</a>
+        <a href="https://3ddoge.tk" class="sc-btn">Back To Homepage</a>
     </div>
 </body>
 </html>
