--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
    })();
 </script>
 </head>
-<body onload="addShippingToCard()">
+<body onload="idk23()">
     
     <header>
         <div class="nav container">
