--- a/public/index.html
+++ b/public/index.html
@@ -73,13 +73,13 @@
             </div>
    
             
-            <h4 class="graytext2">Minimum of $1 order</h4> 
+            <h4 class="graytext2">Minimum of $6 order</h4> 
             <button type="button" class="btn-buy">Pay With Card</button>
             <!-- <h4 class="graytext1">ONLY ACCEPTS <a href=".html">THESE ZIP CODES!</a></h4>  -->
             <div class="gap"></div>
             <div class="collapsible2">
                 <input type="checkbox" id="collapsible-head-3">
-            <label for="collapsible-head-3" class="product-title2">For <b>PAY IN PERSON</b> Click Here:</label>
+            <label for="collapsible-head-3" class="product-title2">For <b>SHIPPING or IN PERSON</b> Click Here:</label>
             <div class="collapsible-text2">
             <p>
                 <b>We only accept these areas!</b>
@@ -158,7 +158,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$3.50</span>
+                <span class="price">6.50</span>
                 <label>
                     <li>Games</li>
                     <li>Storage</li>
@@ -177,7 +177,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$2.50</span>
+                <span class="price">$5.50</span>
                 <label>
                     <li>Office</li>
                 </label>
@@ -195,7 +195,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$3.50</span>
+                <span class="price">$6.50</span>
                 <label>
                     <li>Animal</li>
                     <li>Fidget</li>
@@ -214,7 +214,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$3</span>
+                <span class="price">$6</span>
                 <label>
                     <li>Animal</li>
                     <li>Fidget</li>
@@ -233,7 +233,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$7.50</span>
+                <span class="price">$10.50</span>
                 <label>
                     <li>Sculpture</li>
                     <li>Art</li>
@@ -272,7 +272,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$0.75</span>
+                <span class="price">$4.75</span>
                 <label>
                     <li>Signs</li>
                 </label>
@@ -290,7 +290,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$0.75</span>
+                <span class="price">$4.75</span>
                 <label>
                     <li>Jewlery</li>
                 </label>
@@ -308,7 +308,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$4.50</span>
+                <span class="price">7.50</span>
                 <label>
                 </label>
                 <i class="bx bx-shopping-bag add-cart"></i>
@@ -325,7 +325,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$0.50</span>
+                <span class="price">$4.50</span>
                 <label>
                     <li>Games</li>
                 </label>
@@ -343,7 +343,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$0.75</span>
+                <span class="price">$4.75</span>
                 <label>
                     <li>Games</li>
                     <li>Art</li>
@@ -363,7 +363,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$9</span>
+                <span class="price">$12</span>
                 <label>
                     <li>Games</li>
                     <li>Art</li>
@@ -382,7 +382,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$3</span>
+                <span class="price">$6</span>
                 <label>
                     <li>Games</li>
                 </label>
@@ -400,7 +400,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$2.50</span>
+                <span class="price">$5.50</span>
                 <label>
                     <li>Storage</li>
                     <li>Art</li>
@@ -420,7 +420,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$10</span>
+                <span class="price">$13</span>
                 <label>
                     <li>Storage</li>
                     <li>Household</li>
@@ -439,7 +439,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$9.50</span>
+                <span class="price">$12.50</span>
                 <label>
                     <li>Art</li>
                     <li>Fidget</li>
@@ -458,7 +458,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$3.25</span>
+                <span class="price">$6.25</span>
                 <label>
                     <li>Art</li>
                     <li>Fidget</li>
@@ -477,7 +477,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$1.75</span>
+                <span class="price">$5.75</span>
                 <label>
                     <li>Office</li>
                     <li>Storage</li>
@@ -496,7 +496,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$2.25</span>
+                <span class="price">$5.25</span>
                 <label>
                     <li>Signs</li>
                 </label>
@@ -514,7 +514,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$2.75</span>
+                <span class="price">5.75</span>
                 <label>
                     <li>Games</li>
                     <li>Storage</li>
@@ -533,7 +533,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$0.50</span>
+                <span class="price">$4.50</span>
                 <label>
                     <li>Fidget</li>
                     <li>Outdoor</li>
@@ -552,7 +552,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$1.25</span>
+                <span class="price">$5.25</span>
                 <label>
                     <li>Computer</li>
                     <li>Storage</li>
@@ -571,7 +571,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$8.50</span>
+                <span class="price">$11.50</span>
                 <label>
                     <li>Computer</li>
                 </label>
@@ -589,7 +589,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$6.50</span>
+                <span class="price">$9.50</span>
                 <label>
                     <li>Computer</li>
                     <li>Storage</li>
@@ -608,7 +608,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$2.50</span>
+                <span class="price">$5.50</span>
                 <label>
                     <li>Fidget</li>
                 </label>
@@ -626,7 +626,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$7.25</span>
+                <span class="price">$10.25</span>
                 <label>
                     <li>Storage</li>
                     <li>Computer</li>
@@ -645,7 +645,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$2.50</span>
+                <span class="price">$6.50</span>
                 <label>
                     <li>Animals</li>
                     <li>Fidget</li>
@@ -664,7 +664,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$5.50</span>
+                <span class="price">$8.50</span>
                 <label>
                     <li>Games</li>
                     <li>Storage</li>
@@ -683,7 +683,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$0.50</span>
+                <span class="price">$4.50</span>
                 <label>
                     <li>Keychain</li>
                 </label>
@@ -701,7 +701,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$8.50</span>
+                <span class="price">$11.50</span>
                 <label>
                     <li>Storage</li>
                     <li>Games</li>
@@ -720,7 +720,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$1</span>
+                <span class="price">$5</span>
                 <label>
                     <li>Sculpture</li>
                     <li>Art</li>
@@ -739,7 +739,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$2</span>
+                <span class="price">$6</span>
                 <label>
                     <li>Fidget</li>
                     <li>Games</li>
@@ -758,7 +758,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">$4</span>
+                <span class="price">$7</span>
                 <label>
                     <li>Fidget</li>
                     <li>Art</li>
