--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">6.50</span>
+                <span class="price">$6.50</span>
                 <label>
                     <li>Games</li>
                     <li>Storage</li>
@@ -308,7 +308,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">7.50</span>
+                <span class="price">$7.50</span>
                 <label>
                 </label>
                 <i class="bx bx-shopping-bag add-cart"></i>
@@ -514,7 +514,7 @@
                 </p>
                 </div>
                 </div>
-                <span class="price">5.75</span>
+                <span class="price">$5.75</span>
                 <label>
                     <li>Games</li>
                     <li>Storage</li>
